tests/requests/snapshots/can_get_current_user@user_request.snap
---
source: tests/requests/user.rs
expression: "(response.status_code(), response.text())"
---
(
    200,
    "{\"pid\":\"PID\",\"first_name\":\"first name loco\",\"last_name\":\"last name loco\",\"email\":\"test@loco.com\"}",
)
