tests/requests/snapshots/login_with_valid_password@auth_request.snap
---
source: tests/requests/auth.rs
expression: "(response.status_code(), response.text())"
---
(
    200,
    "{\"token\":\"TOKEN\",\"pid\":\"PID\",\"first_name\":\"a name\",\"last_name\":\"a surname\",\"is_verified\":true}",
)
